stable for stylusloader

--- a/_main.styl
+++ b/_main.styl
@@ -1,15 +1,15 @@
 // html5 doctor css reset
-@import 'inc/reset'
+// @import 'inc/_reset'
 
-body
-	@include mq
-		color blue
-		
-	@include mq('desktop')
-		color red
+// body
+// 	MQ
+// 		color blue
+
+// 	MQ 'desktop'
+// 		color red
 
 
 // MODULES ARE IMPORTED AT LAST
 // SO THE OVERWRITES ARE ONLY IN MODULE CONTEXT
-@import 'modules/testmodule'
-@import 'modules/modulex'
+// @import 'modules/_testmodule'
+// @import 'modules/_modulex'
