--- a/inc/_base.styl
+++ b/inc/_base.styl
@@ -1,8 +1,8 @@
-@charset "UTF-8";
+@charset "UTF-8"
 
 // FUNCTIONAL IMPORTS
 //  like: mixins, functions and so on
-@import "inc/variables";
-@import "inc/mixins";
+@import "inc/_variables"
+@import "inc/_mixins"
 
-@import "inc/helpers";
+@import "inc/_helpers"
