--- a/modules/_modulex.styl
+++ b/modules/_modulex.styl
@@ -1,11 +1,11 @@
-mq('all')
+MQ 'all'
 	body::after
 		content 'moduleX WITHOUT MQ'
 
-mq('tablet')
+MQ 'tablet'
 	body::after
 		content 'moduleX in TABLET MQ'
 
-mq('desktop')
+MQ 'desktop'
 	body::after
 		content 'moduleX in DESKTOP MQ'
