--- a/modules/_testmodule.styl
+++ b/modules/_testmodule.styl
@@ -1,15 +1,15 @@
-mq('all')
+MQ 'all'
 	body::after
 		content 'Testmodule in CUSTOM MQ'
 
-mq('mobile')
+MQ 'mobile'
 	body::after
 		content 'Testmodule in MOBILE MQ'
 
-mq('tablet')
+MQ 'tablet'
 	body::after
 		content 'Testmodule in TABLET MQ'
 
-mq('desktop')
+MQ 'desktop'
 	body::after
 		content 'Testmodule in DESKTOP MQ'
