--- a/full.styl
+++ b/full.styl
@@ -1,25 +1,32 @@
-@import "inc/base"
+@import "inc/_base"
 
-$mq_mobile      = 'sreen and (max-width: 640px)'
-$mq_tablet      = 'sreen and (min-width: 641px)'
-$mq_desktop     = 'sreen and (min-width: 1024px)'
+$mq_mobile      = 'only screen and (max-width: 640px)'
+$mq_tablet      = 'only screen and (min-width: 768px)'
+$mq_desktop     = 'only screen and (min-width: 1024px)'
 
-$mq = 'all'
-@import "main.scss"
-
-@media #{$mq_mobile}
-    $mq = 'mobile'
-    @import "main.scss"
-
-@media #{$mq_tablet}
-    $mq = 'tablet'
-    @import "main.scss"
-
-@media #{$mq_desktop}
-    $mq = 'desktop'
-    @import "main.scss"
+$mqs = {
+  'all'		: 'only screen',
+  'mobile'	: $mq_mobile,
+  'tablet'	: $mq_tablet,
+  'desktop'	: $mq_desktop,
+}
 
 $mq = 'all'
-// Hacks, Quickfix, Dirty Code...
-// http://lmgtfy.com/?q=shame.css
-@import "shame"
+@import "_main"
+
+// @media $mq_mobile
+//     $mq = 'mobile'
+//     @import "_main"
+
+// @media $mq_tablet
+//     $mq = 'tablet'
+//     @import "_main"
+
+// @media $mq_desktop
+//     $mq = 'desktop'
+//     @import "_main"
+
+// $mq = 'all'
+// // Hacks, Quickfix, Dirty Code...
+// // http://lmgtfy.com/?q=shame.css
+// @import '_shame'
