--- a/inc/_helpers.styl
+++ b/inc/_helpers.styl
@@ -1,10 +1,17 @@
 /* HELPERS */
-.clearfix {
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
+
+// cf mixin
+cf()
+	zoom 1
+	&:after
+	&:before
+		content ""
+		display table
+	&:after
+		clear both
+
+// clearfix class - uses the mixin
+.cf
+	cf()
 
 .border-box { box-sizing: border-box; }
