tryout some +MQ() stuff

--- a/full.styl
+++ b/full.styl
@@ -11,6 +11,11 @@ $mqs = {
   'desktop'	: $mq_desktop,
 }
 
+$mqcM = ()
+$mqcT = ()
+$mqcD = ()
+$mqContents = ($mqcM $mqcT $mqcD)
+
 $mq = 'all'
 @import "_main"
 
