--- a/lib/doubleu23-stylus/inc/reset.styl
+++ b/lib/doubleu23-stylus/inc/reset.styl
@@ -18,7 +18,7 @@ input,select{vertical-align:middle}
 
 // Chrome user agent
 input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
-    background-color: rgb(250, 255, 189);
-    background-image: none;
-    color: rgb(0, 0, 0);
+    background-color: inherit;
+    background-image: inherit;
+    color: inherit;
 }
