--- a/lib/doubleu23-stylus/inc/reset.styl
+++ b/lib/doubleu23-stylus/inc/reset.styl
@@ -17,8 +17,5 @@ hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padd
 input,select{vertical-align:middle}
 
 // Chrome user agent
-input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
-    background-color: rgb(250, 255, 189);
-    background-image: none;
-    color: rgb(0, 0, 0);
-}
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill
+    background-color transparent !important
