--- a/lib/doubleu23-stylus/inc/variables.styl
+++ b/lib/doubleu23-stylus/inc/variables.styl
@@ -2,13 +2,13 @@
  *	MEDIA QUERY VARS
  *		used in MQ() mixin
  */
-$mq_mobile      = 'only screen and (max-width: 640px)'
-$mq_tablet      = 'only screen and (min-width: 768px)'
-$mq_desktop     = 'only screen and (min-width: 1024px)'
+$p23_mq_mobile      = 'only screen and (max-width: 640px)'
+$p23_mq_tablet      = 'only screen and (min-width: 768px)'
+$p23_mq_desktop     = 'only screen and (min-width: 1024px)'
 
-$mqs = {
+$p23_mqs = {
   'all'		: 'only screen',
-  'mobile'	: $mq_mobile,
-  'tablet'	: $mq_tablet,
-  'desktop'	: $mq_desktop,
+  'mobile'	: $p23_mq_mobile,
+  'tablet'	: $p23_mq_tablet,
+  'desktop'	: $p23_mq_desktop
 }
