inject process.env.NODE_ENV into stylus

--- a/lib/doubleu23-stylus/inc/variables.styl
+++ b/lib/doubleu23-stylus/inc/variables.styl
@@ -2,7 +2,7 @@
  *	MEDIA QUERY VARS
  *		used in MQ() mixin
  */
-$p23_mq_mobile      = 'only screen and (max-width: 640px)'
+$p23_mq_mobile      = 'only screen and (max-width: 640px)' // unless $p23_mq_mobile is a string
 $p23_mq_tablet      = 'only screen and (min-width: 768px)'
 $p23_mq_desktop     = 'only screen and (min-width: 1024px)'
 
