--- a/lib/doubleu23-stylus/inc/mixins.styl
+++ b/lib/doubleu23-stylus/inc/mixins.styl
@@ -12,6 +12,14 @@
  *          css properties
  */
 
+$mqErrorBlockProperties =
+    display block !important;
+    color #fff !important;
+    background-color red !important;
+    font-weight bold !important;
+    border 1px solid red;
+    padding 0.5rem;
+    margin-bottom 0.5rem;
 
 MQ(name='all')
     mediaString = lookup('$stylus_mq_' + name)
@@ -21,17 +29,20 @@ MQ(name='all')
     else
         // show error on top of page if MQ is not defined
         if $ENV__NODE_ENV is not 'production'
+            $mqErrorTextContentProperty =
+                content '[doubleu23-stylus] Error: ' + 'mediaQuery "' + name + '" not defined!' !important;
             // ^[0]=ROOT / initial reference
             // => http://stylus-lang.com/docs/selectors.html#initial-reference
-            ^[0]:before
-                display block !important;
-                color #fff !important;
-                background-color red !important;
-                font-weight bold !important;
-                content '[doubleu23-stylus] Error: ' + 'mediaQuery "' + name + '" not defined!' !important;
-                border 1px solid red;
-                padding 0.5rem;
-                margin-bottom 0.5rem;
+            if mixin is not 'root'
+                // TBD: find out how to get define root element
+                ^[0]:before
+                    {$mqErrorBlockProperties}
+                    {$mqErrorTextContentProperty}
+            else
+                body:before
+                    {$mqErrorBlockProperties}
+                    {$mqErrorTextContentProperty}
+
 
 
 /**
