--- a/lib/doubleu23-stylus/inc/index.styl
+++ b/lib/doubleu23-stylus/inc/index.styl
@@ -1,6 +1,5 @@
-@import "inc/variables"
-@import "inc/mixins"
+@import 'inc/variables'
+@import 'inc/mixins'
 //  html5 doctor css reset | http://html5doctor.com/html-5-reset-stylesheet
-@import "inc/reset"
-@import "inc/preset"
-@import "inc/helpers"
+@import 'inc/preset'
+@import 'inc/helpers'
