--- a/lib/doubleu23-stylus/inc/variables.styl
+++ b/lib/doubleu23-stylus/inc/variables.styl
@@ -2,8 +2,9 @@
  *  MEDIA QUERY VARS
  *      used in MQ() mixin
  */
-$stylus_mq_xs ?= 'only screen and (max-width: 333px)'
-$stylus_mq_s  ?= 'only screen and (min-width: 640px)'
-$stylus_mq_m  ?= 'only screen and (min-width: 768px)'
-$stylus_mq_l  ?= 'only screen and (min-width: 1024px)'
-$stylus_mq_xl ?= 'only screen and (min-width: 1200px)'
+$stylus_mq_base ?= 'only screen'
+$stylus_mq_xs   ?= 'only screen and (max-width: 333px)'
+$stylus_mq_s    ?= 'only screen and (min-width: 640px)'
+$stylus_mq_m    ?= 'only screen and (min-width: 768px)'
+$stylus_mq_l    ?= 'only screen and (min-width: 1024px)'
+$stylus_mq_xl   ?= 'only screen and (min-width: 1200px)'
